--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "version": 2,
   "builds": [{ "src": "index.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "./index.js" }]
+  "routes": [
+    { "src": "/(.*)", "dest": "./index.js" },
+    { "src": "/products", "dest": "./index.js" }
+  ]
 }
