--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
   "version": 2,
   "builds": [{ "src": "index.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/" }]
+  "routes": [
+    { "src": "/(.*)", "dest": "/" },
+    { "src": "/products", "dest": "/" },
+    { "src": "/review", "dest": "/" }
+  ]
 }
